--- a/todo/todo.html
+++ b/todo/todo.html
@@ -9,13 +9,16 @@
     {{ yield }}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="layout">
+  <h1>My Todos</h1>
+  {{#each todos}}
+    {{todo}}
+  {{/each}}
 </template>
 
-
+<template name="page_header">
+    
+</template>
 
 <template name="loading">
   <h1>Loading...</h1>
@@ -23,5 +26,6 @@
 
 <template name="notFound">
   <h1>Not Found!</h1>
+  <p>The page you are looking for was not found.</p>
 </template>
 
