--- a/accounts/accounts.html
+++ b/accounts/accounts.html
@@ -1,13 +1,30 @@
 <head>
-  <title>accounts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <title>Accounts App</title>
 </head>
 
 <body>
-  {{> hello}}
+    {{> page_header}}
+    {{ yield }}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="layout">
+  <h1>My Accounts</h1>
+  {{#each todos}}
+    {{todo}}
+  {{/each}}
+</template>
+
+<template name="page_header">
+    
+</template>
+
+<template name="loading">
+  <h1>Loading...</h1>
+</template>
+
+<template name="notFound">
+  <h1>Not Found!</h1>
+  <p>The page you are looking for was not found.</p>
 </template>
