adding list files

--- a/todo/todo.html
+++ b/todo/todo.html
@@ -10,14 +10,16 @@
 </body>
 
 <template name="layout">
-  <h1>My Todos</h1>
+  <h2>My Todos</h2>
   {{#each todos}}
     {{todo}}
   {{/each}}
 </template>
 
 <template name="page_header">
-    
+    <div>
+      <h1>Todos example</h1>
+    </div>
 </template>
 
 <template name="loading">
