--- a/todo/todo.html
+++ b/todo/todo.html
@@ -1,12 +1,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" media="screen" />
     <title>Todo App</title>
 </head>
 
 <body>
     {{> page_header}}
     {{ yield }}
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 
 <template name="layout">
