--- a/todo/todos.html
+++ b/todo/todos.html
@@ -4,7 +4,7 @@
   <div class="todo-list">
   	<ul>
 	{{#each todo_items }}
-		<li>{{> title }}</li>
+		<li><label><input type="checkbox" name="todos" id="todo_{{id}}">{{ title }}</label></li>
 	{{/each}}
 	</div>
 </template>
